[gd_scene load_steps=2 format=3 uid="uid://bncn6jtt3jtao"]

[ext_resource type="Script" path="res://Scenes/Nodes/Components/MeleeComponent/MeleeComponent.gd" id="1_6w0qm"]

[node name="MeleeComponent" type="Area2D"]
script = ExtResource("1_6w0qm")
damage = null
delay = null
duration = null
knockback = null
stunTime = null

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
